# Rewind

./: .env.example  .gitignore  README.md  UI.py  pyproject.toml
rewind/: __init__.py  agents.py  api.py  config.py  image_analysis.py  ip_adapter_prompt.py  main.py  main_agent.py  visual_search_agent.py  wiki.py  wikipedia_scraper.py
rewind/agents/: __init__.py  image_modification_agent.py  image_prompt_agent.py  wikipedia_agent.py
